Added working links to old porfolio site for now. Added "Under construction" info box.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -64,6 +64,7 @@ strong {
     font-weight: 700;
     font-size: 1.1rem;
     color: var(--link);
+    transition: $transition-all-03;
 
     &:hover {
         background-color: var(--bg-body);
