--- a/src/scss/components/_project_summary.scss
+++ b/src/scss/components/_project_summary.scss
@@ -3,11 +3,7 @@
 .project-summary {
     display: flex;
     align-items: center;
-    gap: 4%;
-
-    @media (max-width: $breakpoint-desktop-large) {
-        gap: 2%;
-    }
+    gap: 2%;
 
     @media screen and (max-width: $breakpoint-tablet) {
         flex-direction: column;
@@ -17,6 +13,10 @@
         width: 50%;
         display: flex;
         flex-direction: column;
+
+        @media screen and (max-width: $breakpoint-tablet-large) {
+            width: 60%;
+        }
 
         @media screen and (max-width: $breakpoint-tablet) {
             width: 100%;
@@ -64,6 +64,10 @@
         &:hover img {
             transform: scale(1.05);
             opacity: 1;
+        }
+
+        @media screen and (max-width: $breakpoint-tablet-large) {
+            width: 40%;
         }
 
         @media screen and (max-width: $breakpoint-tablet) {
