--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 @use "../base/variables" as *;
+@use "../base/mixins" as *;
 
 .site-footer {
     background-color: var(--bg-navbar);
@@ -14,23 +15,24 @@
     }
 
     &__container {
-        min-height: 48vh;
-        max-width: $max-width;
-        margin: 0 auto;
+        padding: 8% 0;
         display: flex;
         flex-direction: row;
         gap: 8vw;
         align-items: center;
         justify-content: space-between;
 
+        @include content-container;
+
         @media (max-width: $breakpoint-desktop) {
             gap: 4vw;
         }
+
         @media (max-width: $breakpoint-tablet) {
             flex-direction: column;
             gap: 8vh;
-            padding: $content-padding;
         }
+
     }
 
     &__social-container {
@@ -106,15 +108,6 @@
 
         @media (max-width: $breakpoint-tablet) {
             width: 100%;
-        }
-
-        .github-link {
-            margin-top: 1rem;
-            font-size: 1.3rem;
-
-            .icon {
-                height: 24px;
-            }
         }
     }
 }
