--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -109,6 +109,19 @@
         border: none;
     }
 
+    &__success,
+    &__errors {
+        font-size: 1.5rem;
+        color: var(--text-heading);
+        margin-top: 3rem;
+    }
+
+    // &__errors {
+    //     font-size: 1.5rem;
+    //     color: var(--text-heading);
+    //     margin-top: 3rem;
+    // }
+
     textarea {
         resize: vertical;
     }
