--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -97,24 +97,12 @@
         gap: 4rem;
     }
 
-    &__page-title {
+    &__title-container {
         display: flex;
         align-items: center;
         gap: 0.5rem;
         padding: 1% 2%;
         border-bottom: 3px solid var(--accent);
-
-        @media (max-width: $breakpoint-tablet-large) {
-            h1 {
-                font-size: 2.5rem;
-            }
-        }
-
-        @media (max-width: $breakpoint-mobile) {
-            h1 {
-                font-size: 1.8rem;
-            }
-        }
 
         .icon {
             color: var(--accent);
@@ -129,6 +117,16 @@
             }
         }
     }
+
+    &__title {
+        @media (max-width: $breakpoint-tablet-large) {
+            font-size: 2.5rem;
+        }
+
+        @media (max-width: $breakpoint-mobile) {
+            font-size: 1.8rem;
+        }
+    }
 }
 
 
@@ -136,10 +134,6 @@
     height: 100%;
     background-color: var(--bg-body-darker);
     padding: 4% 0 2%;
-
-    @media (max-width: $breakpoint-mobile) {
-        margin: 16% 0;
-    }
 
     &__container {
         position: relative;
@@ -186,23 +180,48 @@
     gap: 8%;
     @include content-container;
 
+    @media (max-width: $breakpoint-tablet-large) {
+        flex-direction: column;
+    }
+
     &__text-container {
         width: 60%;
         display: flex;
         flex-direction: column;
         gap: 2rem;
+
+        @media (max-width: $breakpoint-tablet-large) {
+            width: 100%;
+        }
     }
 
     &__title {
         font-size: 4rem;
         font-weight: 700;
+
+        @media (max-width: $breakpoint-tablet-large) {
+            font-size: 3rem;
+        }
+
+        @media (max-width: $breakpoint-tablet) {
+            font-size: 2.5rem;
+        }
     }
 
     &__body {
         font-size: 1.6rem;
+
+        @media (max-width: $breakpoint-tablet) {
+            font-size: 1.2rem;
+        }
     }
 
     &__image {
         width: 40%;
+
+        @media (max-width: $breakpoint-tablet) {
+            padding-top: 4rem;
+            width: 60%;
+        }
     }
 }
