Did some minor style changes and renamed files for consistency.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,7 +6,7 @@ h2,
 h3 {
     font-family: $font-heading;
     color: var(--text-heading);
-    font-weight: 700;
+    font-weight: 700 !important;
     line-height: 1.2;
 }
 
