--- a/src/scss/components/_project-summary.scss
+++ b/src/scss/components/_project-summary.scss
@@ -111,7 +111,7 @@
 
         @media (max-width: $breakpoint-mobile) {
             font-size: 0.8rem;
-            padding: 0.3rem 0.5rem;
+            padding: 0.3rem 0.7rem;
         }
     }
 
@@ -120,6 +120,10 @@
         align-items: center;
         gap: 0.5rem;
         margin-top: 4%;
+
+        @media (max-width: $breakpoint-mobile) {
+            display: none;
+        }
 
         p {
             color: var(--link);
@@ -131,9 +135,6 @@
         &:hover p {
             color: var(--text-heading);
         }
-
-        // padding-bottom: 0.2rem;
-        // border-bottom: 3px solid var(--link);
     }
 }
 
