--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -24,6 +24,9 @@
 
     @media (max-width: $breakpoint-mobile) {
         padding: 1rem 0.5rem 0.5rem;
+        border: 3px solid var(--bg-navbar);
+        border-radius: 8px;
+        margin-top: 2rem;
     }
 
     &__icon {
@@ -71,23 +74,14 @@
             font-size: 1rem;
         }
     }
-
 }
 
 .projects {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10rem;
+    gap: 8rem;
     @include content-container;
-
-    @media (max-width: $breakpoint-desktop-large) {
-        gap: 10rem;
-    }
-
-    @media (max-width: $breakpoint-desktop) {
-        gap: 8rem;
-    }
 
     @media (max-width: $breakpoint-tablet-large) {
         gap: 6rem;
@@ -125,103 +119,6 @@
 
         @media (max-width: $breakpoint-mobile) {
             font-size: 1.8rem;
-        }
-    }
-}
-
-
-.instagram {
-    height: 100%;
-    background-color: var(--bg-body-darker);
-    padding: 4% 0 2%;
-
-    &__container {
-        position: relative;
-        overflow: hidden;
-        @include content-container;
-    }
-
-    &__cutoff-mask {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 50px;
-        background: var(--bg-body-darker);
-        z-index: 99999 !important;
-    }
-
-    .eapps-instagram-feed-posts-grid-load-more {
-        border: 3px solid var(--link);
-        padding: 0.5rem 1rem;
-        border-radius: 8px;
-        height: auto;
-        color: var(--text-heading);
-        font-family: $font-body;
-        font-size: 1.3rem;
-        margin-top: 3rem;
-    }
-
-    .eapps-instagram-feed-title {
-        font-size: 2.2rem;
-        line-height: 1.2;
-        color: var(--text-heading);
-        margin-bottom: 2rem;
-    }
-
-    .eapps-instagram-feed-posts-item {
-        background: transparent;
-    }
-}
-
-.contact-banner {
-    display: flex;
-    align-items: center;
-    gap: 8%;
-    @include content-container;
-
-    @media (max-width: $breakpoint-tablet-large) {
-        flex-direction: column;
-    }
-
-    &__text-container {
-        width: 60%;
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-
-        @media (max-width: $breakpoint-tablet-large) {
-            width: 100%;
-        }
-    }
-
-    &__title {
-        font-size: 4rem;
-        font-weight: 700;
-
-        @media (max-width: $breakpoint-tablet-large) {
-            font-size: 3rem;
-        }
-
-        @media (max-width: $breakpoint-tablet) {
-            font-size: 2.5rem;
-        }
-    }
-
-    &__body {
-        font-size: 1.6rem;
-
-        @media (max-width: $breakpoint-tablet) {
-            font-size: 1.2rem;
-        }
-    }
-
-    &__image {
-        width: 40%;
-
-        @media (max-width: $breakpoint-tablet) {
-            padding-top: 4rem;
-            width: 60%;
         }
     }
 }
