--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,14 +6,16 @@
 @use 'base/variables';
 @use 'base/mixins';
 
-@use 'layout/main_nav';
+@use 'layout/main-nav';
 @use 'layout/hero';
 @use 'layout/footer';
 @use 'layout/main';
 
-@use 'components/theme_toggle';
+@use 'components/theme-toggle';
 @use 'components/hero-rotator';
-@use 'components/project_summary';
+@use 'components/project-summary';
+@use 'components/instagram-feed';
+@use 'components/contact-banner';
 
 @use 'pages/index';
 @use 'pages/contact';
