Removed unused scripts. Moved the menu button from top to bottom on tablet/mobile for improved accessibility.

--- a/src/scss/components/_instagram-feed.scss
+++ b/src/scss/components/_instagram-feed.scss
@@ -35,6 +35,7 @@
 
     .eapps-instagram-feed-title {
         font-size: 2.2rem;
+        font-weight: 700;
         line-height: 1.2;
         color: var(--text-heading);
         margin-bottom: 2rem;
