--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -66,6 +66,10 @@
         @media (max-width: $breakpoint-mobile) {
             font-size: 1.4rem;
             margin-bottom: 0.4rem;
+
+            &::before {
+                content: "🛠️ "
+            }
         }
     }
 
