--- a/src/scss/layout/_main-nav.scss
+++ b/src/scss/layout/_main-nav.scss
@@ -11,6 +11,9 @@
 
     @media screen and (max-width: $breakpoint-tablet) {
         padding: 0;
+        top: auto;
+        bottom: 0;
+        background-color: transparent !important;
     }
 
     &.scrolled {
@@ -20,6 +23,10 @@
 
     &.hidden {
         transform: translateY(-100%);
+
+        @media (max-width: $breakpoint-tablet) {
+            transform: translateY(+100%);
+        }
     }
 
     &__container {
@@ -31,8 +38,9 @@
 
         @media screen and (max-width: $breakpoint-tablet) {
             flex-direction: row;
-            justify-content: space-between;
-            padding: 1% 0 1% 4%;
+            justify-content: center;
+            // padding: 1% 0 1% 4%;
+            padding-bottom: 0.5rem;
         }
     }
 
@@ -45,8 +53,9 @@
         height: 40px;
 
         @media screen and (max-width: $breakpoint-tablet) {
-            width: 30px;
-            height: 30px;
+            // width: 30px;
+            // height: 30px;
+            display: none;
         }
     }
 
@@ -60,11 +69,19 @@
         z-index: 1001;
 
         .icon {
-            color: var(--link);
+            color: var(--bg-body);
+            width: 32px;
+            height: 32px;
+            margin: 0 auto;
         }
 
         @media screen and (max-width: $breakpoint-tablet) {
             display: block;
+            background-color: var(--link);
+            border: 3px solid var(--bg-navbar);
+            height: 48px;
+            width: 48px;
+            border-radius: 50px;
         }
     }
 
@@ -81,16 +98,16 @@
             top: 0;
             right: 0;
             height: 100vh;
-            width: 70%;
-            max-width: 300px;
+            // width: 70%;
+            // max-width: 300px;
             background-color: var(--bg-navbar);
-            transform: translateX(100%);
+            transform: translateY(100%);
             transition: $transition-all-03;
             flex-direction: column;
             justify-content: flex-start;
             padding: 8%;
             z-index: 1000;
-            padding-top: 8vh;
+            padding-bottom: 16vh;
         }
 
         &.active {
